--- a/simple.html
+++ b/simple.html
@@ -9,7 +9,7 @@
 	<title>Web Page Title</title>
 	
 	<link rel="stylesheet" href="">
-    <link rel="shortcut icon" type="image/ico" href="">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 
