--- a/simple.html
+++ b/simple.html
@@ -10,6 +10,11 @@
 	
 	<link rel="stylesheet" href="">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+	<style>
+		body{
+			font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
+		}
+	</style>
 </head>
 <body>
 
